// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelfServiceView/> ToggleInput.onChange() should send an updateSelfServiceConfigurations action and the ssp for the store with id 1 when it gets deactivated 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Self-service
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="contentColumn col"
        >
          <div
            class="mb-3"
          >
            <p>
              Most ecommerce support requests are about the same 20 types of issues.
            </p>
            <p>
              Self-service enables your customers to browse their orders and select the type of issue they are having. It will then create a chat or help center ticket for your team to handle.
            </p>
            <h5
              class="enableSelfServiceTitle"
            >
              Enable Self-service
               
              <i
                class="material-icons-outlined enableSelfServiceIcon"
                id="enable-self-service-icon"
              >
                info
              </i>
            </h5>
            <table
              class="table-hover table-integrations selfServiceIntegrationsTable table"
              data-testid="table-integrations"
            >
              <tbody>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="true"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore1
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="false"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore2/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore2
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore2/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="true"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore3
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="false"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore4/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore4
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore4/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="col"
        >
          <img
            alt="Self-service example"
            height="689"
            src="test-file-stub"
            width="442"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelfServiceView/> ToggleInput.onChange() should send an updateSelfServiceConfigurations action and the ssp for the store with id 2 when it gets activated 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Self-service
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="contentColumn col"
        >
          <div
            class="mb-3"
          >
            <p>
              Most ecommerce support requests are about the same 20 types of issues.
            </p>
            <p>
              Self-service enables your customers to browse their orders and select the type of issue they are having. It will then create a chat or help center ticket for your team to handle.
            </p>
            <h5
              class="enableSelfServiceTitle"
            >
              Enable Self-service
               
              <i
                class="material-icons-outlined enableSelfServiceIcon"
                id="enable-self-service-icon"
              >
                info
              </i>
            </h5>
            <table
              class="table-hover table-integrations selfServiceIntegrationsTable table"
              data-testid="table-integrations"
            >
              <tbody>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="true"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore1
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="false"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore2/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore2
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore2/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="true"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore3
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="false"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore4/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore4
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore4/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="col"
        >
          <img
            alt="Self-service example"
            height="689"
            src="test-file-stub"
            width="442"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelfServiceView/> render() should render a row for each shopify integration, 2 active and 1 inactive ssp services 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Self-service
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="contentColumn col"
        >
          <div
            class="mb-3"
          >
            <p>
              Most ecommerce support requests are about the same 20 types of issues.
            </p>
            <p>
              Self-service enables your customers to browse their orders and select the type of issue they are having. It will then create a chat or help center ticket for your team to handle.
            </p>
            <h5
              class="enableSelfServiceTitle"
            >
              Enable Self-service
               
              <i
                class="material-icons-outlined enableSelfServiceIcon"
                id="enable-self-service-icon"
              >
                info
              </i>
            </h5>
            <table
              class="table-hover table-integrations selfServiceIntegrationsTable table"
              data-testid="table-integrations"
            >
              <tbody>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="true"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore1
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="false"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore2/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore2
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore2/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <label
                      aria-checked="true"
                      class="container"
                      for="toggle-button-42"
                      role="switch"
                    >
                      <input
                        checked=""
                        class="input"
                        disabled=""
                        id="toggle-button-42"
                        name="toggle-button-42"
                        type="checkbox"
                      />
                      <div
                        class="slider"
                      />
                    </label>
                  </td>
                  <td
                    class="link-full-td"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences"
                    >
                      <div
                        class="nameAndLogoWrapper"
                      >
                        <img
                          alt="Shopify logo"
                          class="logo"
                          role="presentation"
                          src="test-file-stub"
                        />
                        <b>
                          mystore3
                        </b>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="col"
        >
          <img
            alt="Self-service example"
            height="689"
            src="test-file-stub"
            width="442"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelfServiceView/> render() should render the default message when there is no active shopify integration 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Self-service
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="contentColumn col"
        >
          <div
            class="mb-3"
          >
            <p>
              Most ecommerce support requests are about the same 20 types of issues.
            </p>
            <p>
              Self-service enables your customers to browse their orders and select the type of issue they are having. It will then create a chat or help center ticket for your team to handle.
            </p>
            <h5
              class="enableSelfServiceTitle"
            >
              Enable Self-service
               
              <i
                class="material-icons-outlined enableSelfServiceIcon"
                id="enable-self-service-icon"
              >
                info
              </i>
            </h5>
            <div
              class="alert warning"
            >
              <div
                class="content"
              >
                <span
                  class="label"
                >
                  No active Shopify store detected. Please make sure to add a Shopify integration to access the Self-service features.
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <img
            alt="Self-service example"
            height="689"
            src="test-file-stub"
            width="442"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
